package client.network;

public interface OuvinteMensagem {
    void aoReceberMensagem(String mensagem);
}
