package client.network;

public interface OuvinteStatusConexao {
    void aoMudarStatus(Conexao.Status status);
}
